--- a/templates/home.html
+++ b/templates/home.html
@@ -1,53 +1,46 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>
-      Jovian Careers
-    </title>
+    <title>Jovian Careers</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <style>
-      h1{
-        font-size: 80px;
-        font-family: Roboto;
-        font-weight: normal;
-        color: rgb(80, 100, 250);
-        text-align: center;
-      }
-
-      #banner{
-        object-fit: cover;
-      }
-      h2{
-        font-famile: roboto;
-        font-weight: normal;
-        font-size 32px;
-        text-align: center;
-        color: rgrgb(100), 40)
-      }
-      #container{
-        max-width: 720px;
-        margin: 0 auto 0 auto;
+      #banner {
+        height: 360px;
+        width: 100%;
+        object-fit:cover;
+        margin-bottom: 16px;
       }
     </style>
   </head>
   <body>
-    <div id = "container">
-    <h1>Jovian Careers</h1>
-    <img id = "banner" src = "https://miro.medium.com/max/518/1*eK5Se4dzBmePJp2O8byRYA.png">
-    <h2>About Jovian</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ultrices mauris metus, id tincidunt arcu semper eget. Fusce mi velit, cursus ut egestas sit amet, ultricies et tortor. Nullam tortor neque, imperdiet eget mollis vitae, ultricies sit amet dui. Nullam eget elit a dui varius gravida eu sed nibh. Nullam commodo velit sed erat consequat hendrerit. Sed lobortis, massa vulputate commodo consectetur, magna mi consequat eros, in lobortis lacus mauris id diam. Duis facilisis hendrerit diam id sollicitudin. Donec euismod tortor eget mattis scelerisque. Vivamus cursus, enim quis sodales ornare, felis nisi commodo dolor, dignissim placerat ipsum nisl et eros. Suspendisse finibus dui tortor, eu ultrices orci hendrerit a. Donec finibus dui id turpis aliquet hendrerit. Vivamus ut scelerisque orci, ut consectetur massa. Etiam pretium faucibus velit at commodo.
-
-In pretium enim ex, eget gravida odio mollis at. Fusce ullamcorper et nulla non aliquet. Aenean efficitur ac elit in euismod. Nam tempus tellus non cursus tristique. Suspendisse gravida, dui eget tincidunt malesuada, dui purus finibus lacus, ut pulvinar urna tellus sed dolor. Praesent accumsan non lectus sed auctor. Donec et vehicula quam, non ullamcorper turpis. Phasellus dapibus ac leo vitae vestibulum.
-
-Proin at ipsum turpis. Proin accumsan tincidunt elit vel mollis. Maecenas sed viverra justo. Maecenas tristique, nunc id ultricies lacinia, enim purus viverra magna, ut consequat libero orci in ante. Curabitur quis cursus augue, et sagittis lectus. Quisque vehicula fringilla vestibulum. Phasellus diam mauris, consequat et ornare sit amet, blandit eu odio. Fusce nec dictum orci, quis volutpat purus. Pellentesque eu interdum massa. Cras ultricies nulla ut ligula ornare, sit amet faucibus purus tempor. Aenean maximus pulvinar augue at luctus.
-
-Vivamus maximus in urna quis consequat. Duis diam purus, ullamcorper nec eros sed, semper rhoncus est. Integer pharetra sodales arcu vitae pellentesque. Pellentesque tristique vel velit pellentesque condimentum. Suspendisse pharetra in mauris in sodales. Donec euismod pulvinar convallis. Nam imperdiet quam at turpis vulputate vehicula.
-
-Nam convallis ipsum ac aliquam egestas. Quisque efficitur scelerisque ligula eget viverra. Praesent faucibus magna in iaculis placerat. Aliquam euismod dui leo, at sodales diam tincidunt a. Maecenas tempus ac ligula sit amet interdum. Ut dapibus, eros ac volutpat egestas, orci enim posuere justo, vitae ultrices odio quam ut neque. Aenean dapibus metus in lacus tempus, eget accumsan neque tempor. Donec molestie varius justo, nec tempus felis tempus non. Pellentesque fermentum, est ac tempor fermentum, erat lacus bibendum lorem, vel mattis eros dui id urna. Mauris pulvinar convallis libero vehicula consequat. Proin dui libero, vestibulum ac ipsum eget, cursus pellentesque est. Donec quam elit, volutpat non pellentesque quis, dapibus pellentesque lacus. In urna magna, scelerisque non mattis nec, vestibulum id lectus.</p>
-    <h2> Open Positions</h2>
-    <p>TODO - Show the jobs here</p>
-      <div style = "text-align: center;">
-    <button>Contact Us</button>
-        <div>
+    {% include 'nav.html' %}
+    <img class="img-fluid" id="banner" src="https://jovian-careers-website.aakashns.repl.co/static/banner.jpeg" >
+    <div class="container">
+      <h1 class="text-center mt-2 mb-4">
+        {{company_name}} Careers
+      </h1>
+      <div class="row" style="margin-bottom:32px">
+        <div class="col-md-6">
+      <p class="lead">
+        At Jovian, we’re on a mission to build the most highly reputed technical university in the world, and we’re building it completely online. Our flagship data science program helps working professionals with a background in programming or analytics make a career transition to data science. We also offer several free beginner-friendly courses and have a fast-growing community of 200,000+ users.
+      </p>
+        </div>
+        <div class="d-none d-md-block col-md-6">
+        <img src="/static/people.jpeg" style="height:320px;border-radius:4px;">
+        </div>
       </div>
+      <h2 class="text-center mt-2 mb-4">Open Positions</h2>
+      <div>
+        {% for job in jobs %}
+          {% include 'jobitem.html' %}
+        {% endfor %}
+      </div>
+      <div class="text-center">
+      <a class="btn btn-primary btn-lg" href="mailto:hello@jovian.ai?subject=Question%20about%20Job%20Opernings&body=My%20name%3A%20%3Cyour%20name%20here%3E%0D%0A%0D%0AMy%20questions%3A%20%3Center%20question%20here%3E%0D%0A">Contact Us</a>
+      </div>
+    </div>
+    {% include 'footer.html' %}
   </body>
 </html>
