--- a/templates/home.html
+++ b/templates/home.html
@@ -2,53 +2,33 @@
 <html>
   <head>
     <title>Jovian Careers</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <style>
-      h1 {
-       font-size: 40px;
-        font-family: Roboto;
-        font-weight: normal;
-        color: rgb(50,50,50);
-        text-align: center;
-      }
-
       #banner{
-        width: 100%;
         height: 360px;
-        object-fit: cover;
-      }
-
-      h2{
-        font-family: Roboto;
-        font-size; 32px;
-        color: rgb(100,100,100);
-        text-align: center;
-        font-weight: normal;
-      }
-
-      .bodytext {
-        font-family: Roboto;
-        color: rgb(80,80,80);
-      }
-
-      #container{
-        max-width: 720px;
-        margin: 0 auto 0 auto;
+        width: 100%; 
       }
     </style>
   </head>
   <body>
-    <div id = "container">
-    <h1>Jovian Careers</h1>
-    <img id = "banner" src = "https://cautious-garbanzo.bhavya-1504.repl.co/static/banner.jpeg">
-    <h2> About Jovian </h2>
-    <p class = "bodytext">
+    <div class = "container">
+    <h1 class="text-center mt -2 mb-4"> {{company_name}} Careers</h1>
+    <img class = "img-fluid" id = "banner" src = "https://cautious-garbanzo.bhavya-1504.repl.co/static/banner.jpeg">
+    <h2 class="text-center mt-2 mb-4"> About Jovian </h2>
+    <p class = "lead">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat nisl eu cursus consequat. Donec ullamcorper venenatis tellus, sit amet finibus nisi pellentesque eu. Phasellus maximus elit a sollicitudin imperdiet. Morbi interdum imperdiet sem eu tincidunt. Sed vulputate, tortor nec ultrices aliquet, nibh ipsum lacinia ipsum, at volutpat elit urna vitae ligula. Ut volutpat nec leo vitae commodo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla nisl purus, placerat non leo a, auctor congue nisi.
     </p>
-    <h2> Open Positions </h2>
-    <p calss = "bodytext"> TODO - Show the job openings</p>
-      <div style = "text-align:center;">
-    <button>Contact Us</button>
-        <p>Copyright 2022, Jovian</p>
+    <h2 class="text-center mt-2 mb-4"> Open Positions </h2>
+    <p>
+      {% for job in jobs %}
+      {% include 'jobitem.html' %}
+      {% endfor %}
+    </p>
+      <div class = "text-center">
+    <button class="btn btn-primary btn-lg">Contact Us</button>
+        <p class = "mt-4">Copyright 2022, Jovian</p>
       </div>
     </div>
   </body>
