--- a/templates/home.html
+++ b/templates/home.html
@@ -20,7 +20,7 @@
     <p class = "lead">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat nisl eu cursus consequat. Donec ullamcorper venenatis tellus, sit amet finibus nisi pellentesque eu. Phasellus maximus elit a sollicitudin imperdiet. Morbi interdum imperdiet sem eu tincidunt. Sed vulputate, tortor nec ultrices aliquet, nibh ipsum lacinia ipsum, at volutpat elit urna vitae ligula. Ut volutpat nec leo vitae commodo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla nisl purus, placerat non leo a, auctor congue nisi.
     </p>
-    <h2 class="text-center mt-2 mb-4"> Open Positions </h2>
+    <h2 class="text-center mt-2 mb-4"> Job Openings </h2>
     <p>
       {% for job in jobs %}
       {% include 'jobitem.html' %}
