--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,12 +1,17 @@
 <div class="container">
-  <footer class="py-3 my-4">
-    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-      <li class="nav-item"><a  target="_blank" href="https://www.jovian.ai" class="nav-link px-2 text-muted">Home</a></li>
-      <li class="nav-item"><a  target="_blank" href="https://jovian.ai/learn" class="nav-link px-2 text-muted">Courses</a></li>
-      
-      <li class="nav-item"><a target="_blank" href="https://jovian.ai/events" class="nav-link px-2 text-muted">Events</a></li>
-      <li class="nav-item"><a  target="_blank" href="https://jovian.ai/about" class="nav-link px-2 text-muted">About</a></li>
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <p class="col-md-4 mb-0 text-muted">&copy; 2022 Jovian.ai</p>
+
+    <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+      <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
+    </a>
+
+    <ul class="nav col-md-4 justify-content-end">
+      <li class="nav-item"><a href="https://jovian.ai" class="nav-link px-2 text-muted">Home</a></li>
+      <li class="nav-item"><a href="https://jovian.ai/learn" class="nav-link px-2 text-muted">Courses</a></li>
+      <li class="nav-item"><a href="https://jovian.ai/events" class="nav-link px-2 text-muted">Events</a></li>
+      <li class="nav-item"><a href="https://jovian.ai/learn/zero-to-data-analyst-bootcamp/discussions" class="nav-link px-2 text-muted">Discussion</a></li>
+      <li class="nav-item"><a href="https://jovian.ai/about" class="nav-link px-2 text-muted">About</a></li>
     </ul>
-    <p class="text-center text-muted">&copy; 2022 Jovian, Inc</p>
   </footer>
 </div>
