--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -14,6 +14,6 @@
   {% endif %}
   </div>
   <div class = "col-2">
-  <button type="button" class="btn btn-outline-primary float-right align-middle">Apply</button>
+  <a href = "mailto:bhavyab1375@gmail.com?subject=Application%20for%20Job%20Application%20for%20{{job['title']}}&body=Hello%2C%20I%20am%20%3Cyour%20name%3E.%0D%0AMy%20resume%20link%20%3Cresume%20link%3E.%0D%0AMy%20linkedin%20link%20%3Clinkedin%20link%3E." type="button" class="btn btn-outline-primary float-right align-middle">Apply</a>
   </div>
 </div>
