added blog link

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -11,7 +11,7 @@
       <li class="nav-item"><a href="https://jovian.ai/learn" class="nav-link px-2 text-muted">Courses</a></li>
       <li class="nav-item"><a href="https://jovian.ai/events" class="nav-link px-2 text-muted">Events</a></li>
       <li class="nav-item"><a href="https://jovian.ai/learn/zero-to-data-analyst-bootcamp/discussions" class="nav-link px-2 text-muted">Discussion</a></li>
-      <li class="nav-item"><a href="https://jovian.ai/about" class="nav-link px-2 text-muted">About</a></li>
+      <li class="nav-item"><a href="https://jovian.ai/blog" class="nav-link px-2 text-muted">Blog</a></li>
     </ul>
   </footer>
 </div>
