dynamic pages for each job added

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,6 +1,6 @@
 <nav class="box-shadow-sm fixed-top bg-white">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="/">
       <img src="/static/logo.jpeg" alt="Logo" width="150" height="80" class="d-inline-block align-text-top">
     </a>
   </div>
