--- a/templates/jobpage.html
+++ b/templates/jobpage.html
@@ -4,9 +4,32 @@
       <title>
         {{job.title}} - Jovian Careeres
       </title>
+       {% include 'bootstrap.html' %}
+      </head>
       <body>
-        <h3> Title </h3>
-        <p>{{job.title}}</p>
+        {% include 'nav.html' %}
+        {% include 'banner.html' %}
+        <div class = "container">
+          <h1 class="text-center mt-2 mb-4"> Jovian Careers
+          </h1>
+        <h2 class = "mb-2">{{job.title}}</h2>
+        <h4>Location</h4>
+        <p class = "lead mt-0"> {{job.location}}</p>
+        <h4>Job Responsibilities</h4>
+          <ul>
+            {% for line in job.responsibilitier.split("\n") %}
+            <li>{{line}}</li>
+            {% endfor %}
+          </ul>
+        <h4>Requirements</h4>
+        <ol>
+          {% for line in job.requirements.split("\n") %}
+            <li>{{line}}</li>
+          {% endfor %}
+        </ol>
+        <h4>Salary</h4>
+        <p>{{job.currecny}}{{job.salary}}</p>
+        </div>
+        {% include 'footer.html' %}
       </body>
-    </head>
   </html>
